10 commit for 不知道改了什么 哈哈哈

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strict-select",
+  "name": "strict-select-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "zx <zx@example.com>",
